# CompAIon

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  local.properties  mlc-package-config.json  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/offlinevoice/: AssistantController.kt  AudioRecorder.kt  LauncherActivity.kt  LocalLlmStub.kt  MainActivity.kt  MlcEngine.kt  TtsEngine.kt  WavWriter.kt  WhisperBridge.kt
app/src/main/java/com/example/offlinevoice/ui/: AnimatedGradientTextView.kt
app/src/main/res/drawable/: bg_button_primary.xml  bg_haze.xml  bg_panel.xml  bg_space.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: MLC_ANDROID_CPU_RUNBOOK.md  MODEL_DOWNLOAD_ZIP.md  PROJECT_DESCRIPTION.md  STORE_LISTING.md  STORE_RELEASE_CHECKLIST.md
docs/run-logs/2026-01-30-exported-activity-guard/: 00-overview.md
docs/run-logs/2026-01-30-exported-activity-lint/: 00-overview.md
docs/run-logs/2026-02-04-mlc-opencl-device/: 00-overview.md
mlcmodel/: build.gradle.kts
mlcmodel/src/main/: AndroidManifest.xml
scripts/: build_model_zip.sh
